<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mapbox_styles"
        android:title="@string/map_style">
        <menu>
            <item
                android:id="@+id/mapbox_streets"
                android:title="@string/mapbox_streets"/>
            <item
                android:id="@+id/outdoors"
                android:title="@string/outdoors" />
            <item
                android:id="@+id/light"
                android:title="@string/light" />
            <item
                android:id="@+id/dark"
                android:title="@string/dark" />
            <item
                android:id="@+id/satellite"
                android:title="@string/satellite" />
            <item
                android:id="@+id/satellite_streets"
                android:title="@string/satellite_streets" />
        </menu>
    </item>
    <item
        android:id="@+id/exit"
        android:title="@string/exit" />

</menu>